# rocket-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
src/: lib.rs  schema.rs
src/db/: common.rs  message.rs  user.rs
src/logic/: home.rs  message.rs  user.rs
src/migrations/2024-06-15-081703_create_tables/: down.sql  up.sql
src/migrations/2024-06-16-172322_add_user_name_and_password_in_users/: down.sql  up.sql
src/models/: message.rs  user.rs
src/routes/: home.rs  message.rs  message_channel.rs  user.rs
src/structs/: app_state.rs  jwt.rs  request.rs  response.rs  task.rs  worker_queue.rs
src/utils/: common.rs  jwt.rs  worker.rs
tests/: mod.rs
tests/routes/: home.rs  message.rs  user.rs
tests/utils/: mod.rs  test_context.rs
