[package]
name = "rocket-template"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = [
    "sqlite",
    "serde_json",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
